[ui-components] fix: slider ui on firefox (#3413)

--- a/packages/ui-components/web/statics/styles/slider.scss
+++ b/packages/ui-components/web/statics/styles/slider.scss
@@ -57,6 +57,7 @@ $track-radius: 3px !default;
   -webkit-appearance: none;
   margin: $thumb-height / 2 0;
   width: $track-width;
+  height: 6px;
 
   &:focus {
     &::-webkit-slider-runnable-track {
